<resources>
    <string name="app_name">T Feedback App</string>
    <string name="at_check_app_will_send_otp_to_your_entered_number">T Feedback Will Send OTP To Your Entered Number</string>
    <string name="enter_your_number">Enter Your Number…</string>
    <string name="send_otp">Send OTP</string>


    <string name="enter_the_otp_which_you_received">Enter The OTP Which You Received</string>
    <string name="enter_the_otp_here">Enter the OTP here....</string>
    <string name="didnt_receive_change_your_number">Didn\'t Receive ? Change Your Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="your_profile">Your Profile</string>
    <string name="enter_your_name_here">Enter Your Name Here</string>

    <string name="save_your_profile">Save Your Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="from">from</string>
    <string name="at_check_app">T Feedback</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_your_new_name">Enter Your New Name…</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="name">name</string>



    <string name="add_students">Add Students</string>
    <string name="students_list">Student List</string>
    <string name="summary">Summary</string>
    <string name="student_firstname">Enter Student\'s Firstname</string>
    <string name="student_lastname">Enter Student\'s Lastname</string>
    <string name="student_birthdate">Enter Student\'s Birth Date</string>
    <string name="student_phone_number">Enter Student\'s Parent Phone Number</string>
    <string name="add_student">Add Student</string>
    <string name="back_button">back button</string>
    <string name="there_is_no_students">There Is No Students</string>
    <string name="_0">0</string>
    <string name="remove">Remove</string>
    <string name="clear_feedback">Clear Feedback</string>


</resources>