<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0F9D58"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
        <ImageView
            android:id="@+id/back_button_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_baseline_arrow_back_24" />

    </androidx.appcompat.widget.Toolbar>
    <!-- Involvement section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="16dp">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student with most Involvement"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/most_involvement_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/there_is_no_students"
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>

        <TextView
            android:id="@+id/most_involvement_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAppearance="?android:textAppearanceMedium"
            />
    </LinearLayout>
    <!-- Involvement section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="16dp">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student with most Social Skills"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/most_Social_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/there_is_no_students"
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>

        <TextView
            android:id="@+id/most_social_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAppearance="?android:textAppearanceMedium"
            />
    </LinearLayout>
    <!-- Involvement section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student with most Positive Behavior"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/most_behavior_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/there_is_no_students"
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>

        <TextView
            android:id="@+id/most_behavior_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAppearance="?android:textAppearanceMedium"
            />
    </LinearLayout>

</LinearLayout>
